--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -33,12 +33,7 @@
     text-rendering: optimizeLegibility;
   }
   
-  /* Hide scrollbar */
-  ::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
-    background: transparent;
-  }
+
   
   /* -------------------------------- */
   /* ----- 2. REUSED ITEMS -----------*/
@@ -48,11 +43,17 @@
     display: -ms-flexbox;
     display: flex;
   }
-
+  .side-panel {
+    display: none;
+    padding: 20px;
+    height: 100%;
+    width: 25%;
+    background-color: #fff;
+  }
 
   .main-panel {
     padding: 20px;
-    height: 1000px;
+    height: 1200px;
     width: 100%;
     margin: 0 auto;
     max-width: 95% ;
@@ -86,64 +87,15 @@
   /* ----- 3. SIDE PANEL -------------*/
   /* -------------------------------- */
   
-  .add-project-btn:hover,
-  .project-card:hover {
-    -webkit-transform: translateY(-5px) scale(1.01);
-    transform: scale(1.01);
-    -webkit-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
-    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
-  }
   
   .card-holder {
     height: 70%;
     padding: 0 15px;
     padding-top: 20px;
-    overflow: scroll;
     flex-direction: column;
-    -ms-overflow-style: none; /* Internet Explorer 10+ */
-    scrollbar-width: none; /* Firefox */
-  }
-  
-  .project-card {
-    margin-bottom: 18px;
-    padding: 10px 10px;
-    height: 100px;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 5px;
-    -webkit-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    cursor: pointer;
-  }
-  
-  .project-card p {
-    height: 100%;
-    font-size: 110%;
-    font-weight: 500;
-    width: 60%;
-    overflow: scroll;
-    align-items: center;
-    -ms-overflow-style: none; /* Internet Explorer 10+ */
-    scrollbar-width: none; /* Firefox */
-  }
-  .active-card,
-  .project-card:hover {
-    background-color: #49d8a0;
-    color: #fff;
   }
   
   
-  
-  .project-card:hover circle:nth-child(2) {
-    stroke: #d84981;
-  }
   
   /* -------------------------------- */
   /* ----- 4. MAIN PANEL -------------*/
@@ -154,8 +106,8 @@
     flex:1;
     display: flex;
     flex-basis: 100%;
-    height: 400px;
-      }
+    height: 50%;
+    }
 
   .right-graph-container,
   .left-graph-container ,
@@ -164,7 +116,7 @@
     flex:1;
     flex-basis: 50%;
     margin: 20px;
-    height: 350px;
+    /* height: 350px; */
     -webkit-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
     display: flex;
@@ -208,6 +160,13 @@
     height: 100%;
     overflow: scroll;
   }
+
+    /* Hide scrollbar */
+    .technologies-count-container::-webkit-scrollbar {
+      width: 0px;
+      height: 0px;
+      background: transparent;
+    }
 
   .technologies-count {
     display: flex;
@@ -264,7 +223,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    height: 12%;
+    height: 10%;
   }
   header div {
     -webkit-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
@@ -333,7 +292,7 @@
   .middle-tabs {
     margin-top: 20px;
     width: 100%;
-    height: 90%;
+    height: 80%;
 
   }
   
@@ -351,6 +310,8 @@
     -webkit-box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
     z-index: 999;
+    display: flex;
+    flex-direction: column;
   }
   
   
@@ -360,7 +321,7 @@
   footer {
     bottom: 0px;
     margin: 20px 0px;
-    height: 8%;
+    height: 7%;
     background-color: #49d8a0;
     border-radius: 5px;
     -webkit-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
