--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -44,20 +44,62 @@
     display: flex;
   }
   .side-panel {
-    display: none;
+    display: block;
+    /* flex: 1; */
     padding: 20px;
     height: 100%;
-    width: 25%;
+    width: 20%;
     background-color: #fff;
+    /* position: fixed; */
+  }
+  .head-text-logo {
+    padding: 10px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  
+  .logo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+  }
+  
+  .logo img {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .head-text-logo p {
+    font-size: 120%;
+    font-weight: 500;
+    margin-left: 20px;
   }
 
+  .card-holder li {
+    list-style: none;
+    padding: 15px;
+    background-color: #f1f1f1;
+    margin: 2px;
+    border-radius: 5px;
+  }
+
+  .card-holder li:hover {
+    background-color: #49d8a0;
+    color: white;
+  }
+  .card-holder a {
+    text-decoration: none;
+  }
   .main-panel {
+    /* flex: 1; */
     padding: 20px;
     height: 1200px;
     width: 100%;
     margin: 0 auto;
     max-width: 95% ;
-    background-color: white;
+    background-color: #f1f1f1;
   }
   
   .btn-red {
@@ -117,11 +159,13 @@
     flex-basis: 50%;
     margin: 20px;
     /* height: 350px; */
-    -webkit-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+    /* -webkit-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3); */
+    /* box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3); */
     display: flex;
     flex-wrap: wrap;
-    background-color: white;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+
   }
 
   .projects-count,
@@ -136,6 +180,13 @@
     color: #fff;
     border-radius: 10px;
 
+  }
+
+  #all-project-count,
+  #all-resource-count,
+  #all-billable-count,
+  #all-shadow-count {
+    font-size: 200%;
   }
 
   .projects-count,
@@ -177,6 +228,9 @@
   .tech-logo {
     /* flex: 0.1; */
     width:10%;
+  }
+  i {
+    
   }
   .tech-count {
     /* flex:1; */
@@ -300,9 +354,9 @@
   
   .tab-content {
     height: 100%;
-    width: 95%;
+    width: 100%;
     margin: auto;
-    background-color: #f1f1f1;
+    background-color: white;
     text-align: center;
     padding: 30px;
     display: block;
