--- a/resources/css/dashboard_responsive.css
+++ b/resources/css/dashboard_responsive.css
@@ -28,7 +28,7 @@
     }
 
     .side-panel {
-        display: block;
+        display: none;
         position: fixed;
         width: 100%;
         height: 100%;
