--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -191,8 +191,6 @@
     margin-bottom: 30px;
   }
 
-
-
   #all-project-count,
   #all-resource-count,
   #all-billable-count,
@@ -200,6 +198,13 @@
     font-size: 200%;
   }
 
+  .projects-count:hover,
+  .resources-count:hover,
+  .billable-count:hover,
+  .shadow-count:hover {
+    color:black;
+    background-color:rgba(255, 255, 255, 0.884);
+  }
   .projects-count,
   .shadow-count {
     background-color: #49d8a0;
@@ -240,23 +245,12 @@
     /* flex: 0.1; */
     width:10%;
   }
-  i {
-    
-  }
+
   .tech-count {
     /* flex:1; */
     width:90%;
     padding-left: 15px;
     text-align: left;
-  }
-
-  progress {
-    width: 80%;
-    animation: animateprogressbar 2s;
-  }
-  @keyframes animateprogressbar {
-    from   {width: 0}
-    to  {width: 80%;}
   }
 
   .card-icon {
@@ -268,16 +262,27 @@
     margin: auto;
   }
 
+  .progress-bar {
+    width: 90%;
+    background-color: #e0e0e0;
+    border-radius: 6px;
+  }
   
+  .progress-bar-fill {
+    display: block;
+    height: 8px;
+    background-color: grey;
+    border-radius: 3px;
+    width: 30%;
+    transition: width 500ms ease-in-out;
+    animation: animateprogressbar 2s;
+  }
+  @keyframes animateprogressbar {
+    from   {width: 0}
+    to  {width: 30%;}
+  }
 
-
-  
-
-
-   
-
-
-     /*----- Header ---------------*/
+  /*----- Header ---------------*/
   .mobile-hamburger {
     display: none;
   }
