--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -47,12 +47,12 @@
     display: block;
     /* flex: 1; */
     padding: 20px;
-    height: 100%;
     width: 20%;
-    background-color: #fff;
+    background-color: #9e9e9e;
     /* position: fixed; */
   }
   .head-text-logo {
+    color: white;
     padding: 10px;
     -webkit-box-align: center;
     -ms-flex-align: center;
@@ -202,8 +202,10 @@
   .resources-count:hover,
   .billable-count:hover,
   .shadow-count:hover {
-    color:black;
-    background-color:rgba(255, 255, 255, 0.884);
+    -webkit-transform: translateY(-10px) scale(1.01);
+    transform: scale(1.01);
+    -webkit-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
   }
   .projects-count,
   .shadow-count {
@@ -248,7 +250,8 @@
 
   .tech-count {
     /* flex:1; */
-    width:90%;
+    width:80%;
+    margin-left: 6px;
     padding-left: 15px;
     text-align: left;
   }
@@ -263,23 +266,24 @@
   }
 
   .progress-bar {
-    width: 90%;
+    width: 100%;
     background-color: #e0e0e0;
     border-radius: 6px;
+    animation: animateprogressbar 2s
   }
   
   .progress-bar-fill {
     display: block;
     height: 8px;
-    background-color: grey;
+    background-color: #9e9e9e;
     border-radius: 3px;
     width: 30%;
     transition: width 500ms ease-in-out;
-    animation: animateprogressbar 2s;
+    ;
   }
   @keyframes animateprogressbar {
     from   {width: 0}
-    to  {width: 30%;}
+    to  {width: 100%;}
   }
 
   /*----- Header ---------------*/
