--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -46,12 +46,11 @@
     /* flex: 1; */
     padding: 20px;
     width: 20%;
-    background-color: #9e9e9e;
+    background-color: #dcdcdc;
     /* position: fixed; */
   }
   .head-text-logo {
-    color: white;
-    padding: 10px;
+    color: rgb(2, 1, 1);
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -78,7 +77,6 @@
   .card-holder ul li {
     list-style: none;
     padding: 15px;
-    background-color: #f1f1f1;
     margin: 2px;
     border-radius: 5px;
     align-items: center;
