--- a/resources/css/dashboard_responsive.css
+++ b/resources/css/dashboard_responsive.css
@@ -1,9 +1,37 @@
 @media only screen and (max-width: 1080px) {
-    #proVsTechChart,
-    #proVsResourcesChart{
-        width: 300px;
-        height: 300px;
-    }
+  #proVsTechChart,
+  #proVsResourcesChart{
+      width: 300px;
+      height: 300px;
+  }
+
+  .hide-menu{
+    display: none;
+  }
+
+  .head-text-logo{
+    padding-left: 5px;
+    padding-top: 10px;
+  }
+
+  .side-panel{
+    width: auto;
+
+  }
+
+  .main-panel {
+    padding: 10px;
+    margin-left: 102px;
+  }
+
+  .card-holder{
+    padding: 0px;
+  }
+
+  hr {
+    margin: 60px 0;
+    margin-bottom: auto;
+  }
 }
 
 
