--- a/resources/css/dashboard_responsive.css
+++ b/resources/css/dashboard_responsive.css
@@ -38,7 +38,7 @@
 
 @media only screen and (max-width: 875px) {
    .main-panel {
-       height: 2700px;
+       height: 2000px;
        margin: 0px;
    }
    header{
@@ -122,7 +122,7 @@
 
 @media only screen and (max-width: 500px) {
     .main-panel {
-        height: 2700px;
+        /* height: 2700px; */
         padding: 20px 0px;
     }
 
@@ -145,8 +145,8 @@
         width: 50%;
         height: 100%;
         z-index: 1000;
-        -webkit-clip-path: circle(100px at 90% -15%);
-        clip-path: circle(100px at 90% -15%);
+        -webkit-clip-path: circle(100px at 90% -20%);
+        clip-path: circle(100px at 90% -20%);
         -webkit-transition: all 0.5s ease;
         transition: all 0.5s ease;
       }
@@ -204,7 +204,7 @@
 /* mobile view  */
 @media only screen and (max-width: 425px) {
     .main-panel {
-        height: 3500px;
+        height: 3000px;
         padding: 20px 0px;
     }
     .left-counts-container {
@@ -212,11 +212,6 @@
       flex-direction: column;
       flex-wrap: nowrap;
     }
-    .right-graph-container, .left-graph-container, .right-counts-container, .left-counts-container {
-      height: 25%;
-    }
-
-    
     .projects-count, .resources-count, .billable-count, .shadow-count {
       flex: 1;
       flex-basis: 100%;
@@ -242,12 +237,7 @@
     .tab-content {
         width: 100%;
     }
-    #proVsTechChart,
-    #proVsResourcesChart{
-        width: 200px;
-        height: 300px;
-    }
-    
+
   .graph-container, .counts-container {
     height:auto;
 }
