--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -814,3 +814,52 @@ th {
     transform: rotate(360deg);
   }
 }
+
+
+/* --------------------------- */
+.navigation-drawer{
+  flex-direction: column;
+  width: 100vw;
+  position: fixed;
+  top:0;
+  align-items: center;
+  margin-top: -42px;
+  transition: all 0.5s;
+  z-index: 99999;
+}
+
+.navigation-drawer nav{
+  width: 100%;
+  background-color: grey;
+}
+
+.navigation-drawer nav ul {
+
+  float: right;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.navigation-drawer nav ul li{
+  margin-right: 10px ;
+  display: inline-block;
+}
+
+.navigation-drawer nav ul li a{
+  text-decoration: none;
+  color: white;
+}
+
+.drawer-handle {
+  width: fit-content;
+  padding: 1px 12px;
+  border-radius: 3px;
+  margin-top: -2px;
+  background-color: grey;
+  color: white;
+  cursor: pointer;
+}
+
+.active-drawer {
+  margin-top: 0;
+}
